fixing layout issues caused by scrollbars appearing out of nowhere

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
 	margin: 0px;
-	overflow: hidden;
 	background: black;
 	color: white;
 }
@@ -13,17 +12,14 @@ canvas {
 	display: grid;
 	grid-template-columns: 100%;
 	grid-template-rows: 48px 1fr;
-	width: 100vw;
 	height: 100vh;
 }
 
 #commandLine {
 	display: grid;
     grid-template-columns: 32px 1fr;
-    grid-template-rows: 48px;
     justify-items: center;
 	align-items: center;
-	/*border-bottom: 1px solid #616161;*/
 }
 
 #enterSymbol {
@@ -31,12 +27,10 @@ canvas {
 }
 
 #terminal {
-	outline: none;
-	border: none;
-	width: 100%;
-	height: 100%;
-	background: transparent;
-	color: white;
+    outline: none;
+    border: none;
+    background: transparent;
+    place-self: stretch;
 }
 
 td {
